--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBJCyQGTLEWJgBZWfGEnuRWJz4ZxovIGnM" /> <!-- API key -->
+            android:value="${MAPS_API_KEY}" /> <!-- API key -->
 
         <activity
             android:name=".MapsActivity"
